# chem_pred_transformer

./: .gitignore  TODO.md  bart_vocab.json  benchmark_zinc_data.py  chemformer_copy.py  chemformer_tmp.py  dataset.py  finetune_bart_uspto_sep.sh  main.ipynb  main.py  metrics.py  preprocess_aux_props_uspto.py  preprocess_zinc_data.py  pyproject.toml  submit.sh  submit_test.sh  test.py  tmp.py  tmp2.py  tmp3.py  tokeniser_tmp.py  train.py  trained_tokenizer.py  utils.py
conf/: config.yaml
conf/dataset/: chembl.yaml  chembl_filtered.yaml  private-fold.yaml  private.yaml  private_rotate.yaml  uspto.yaml  uspto_mixed.yaml  uspto_retro.yaml  uspto_sep.yaml  zinc.yaml  zinc_lmdb.yaml  zinc_nmap.yaml  zinc_sqlite.yaml
conf/db/: postgres.yaml
conf/model/: bart.yaml  bart_small.yaml  chemformer.yaml
conf/module/: bart.yaml
conf/tokenizer/: chemformer.yaml  hf.yaml
dataset/: base.py  chembl.py  pretrain.py  private.py  uspto.py  utils.py  zinc.py
models/: bart.py  base.py  chemformer.py  gpt.py  lora.py  mha.py  norm.py  positional_encoding.py  rl.py  sampler.py  transformer.py  utils.py  vae.py
tests/: test_kv_cache.py
tokenisers/: chemformer.py  neocart.py  neochem.py
trained_tokenizer/: tokenizer.json  tokenizer_config.json
trained_tokenizer/trained_tokenizer.chembl.filtered.1.April/: tokenizer.json
trained_tokenizer_tmp/: tokenizer.json
trainer/: bart.py  gpt.py  ppo.py  vae.py
