[project]
name = "chem-pred-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepspeed>=0.16.4",
    "einops>=0.8.1",
    "fireducks>=1.2.5",
    "joblib>=1.4.2",
    "lightning>=2.5.0.post0",
    "lmdb>=1.6.2",
    "pandas>=2.2.3",
    "pysmilesutils",
    "rdkit>=2024.9.6",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.2.2",
    "torch>=2.6.0",
    "torchmetrics>=1.6.3",
    "tqdm-joblib>=0.0.4",
    "transformers>=4.49.0",
    "xformers>=0.0.29.post3",
]

[tool.uv.sources]
pysmilesutils = { git = "https://github.com/MolecularAI/pysmilesutils" }
