[project]
name = "chem-pred-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepspeed>=0.16.4",
    "einops>=0.8.1",
    "fireducks>=1.2.5",
    "gradio>=5.25.2",
    "hydra-core>=1.3.2",
    "joblib>=1.4.2",
    "lightning>=2.5.0.post0",
    "lmdb>=1.6.2",
    "matplotlib>=3.10.1",
    "muon",
    "nx>=0.0.0",
    "pandas>=2.2.3",
    "pyright>=1.1.400",
    "pysmilesutils",
    "python-lsp-server>=1.12.2",
    "rdkit>=2024.9.6",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.2.2",
    "torch>=2.6.0",
    "torchmetrics>=1.6.3",
    "tqdm-joblib>=0.0.4",
    "transformers>=4.49.0",
    "xformers>=0.0.29.post3",
]

[tool.uv.sources]
pysmilesutils = { git = "https://github.com/MolecularAI/pysmilesutils" }
muon = { git = "https://github.com/KellerJordan/Muon" }
